--- a/block-BHaacs/index.html
+++ b/block-BHaacs/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/4678d1b0a4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./Stylesheet/style.css" />
     <title>TrackL - Assignment I</title>
   </head>
@@ -56,7 +57,8 @@
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
               omnis aliquam impedit obcaecati ad, odit odio expedita a dolorum
-              dignissimos nihil modi, vero ex accusamus.
+              dignissimos nihil modi,  odit odio expedita a dolorum
+              dignissimos nihil modivero ex accusamus.
             </p>
             <div class="flex-1">
               <div class="triangle-right-white"></div>
